--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
@@ -39,7 +39,7 @@
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta" var="user" value="#{rptUsuariosController.listDatos}" 
-                             paginator="false" emptyMessage="No hay usuarios que mostrar"
+                             paginator="false" emptyMessage="No se encontraron datos"
                              reflow="true">
 
                     <p:column headerText="Usuario" >
