--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
@@ -39,6 +39,7 @@
                              paginator="true" emptyMessage="NO HAY SECCIONES QUE MOSTRAR"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
+                             emptyMessage="No se encontraron datos"
                              reflow="true">
                     <p:column headerText="Año Escolar" filterBy="#{sec.idAnioEscolar.aeAnio}" filterable="true" filterMatchMode="contains">
                         #{sec.idAnioEscolar.aeAnio}
