--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
@@ -31,6 +31,7 @@
                              paginator="true"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
+                             emptyMessage="No se encontraron datos"
                              reflow="true"
                              >
                     <p:column headerText="Nombre" filterBy="#{car.scNombre}" filterMatchMode="contains">
