--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
@@ -37,6 +37,7 @@
                              paginator="true" rows="10" emptyMessage="No hay consultas que mostrar"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
+                             emptyMessage="No se encontraron datos"
                              reflow="true">
                     
                         <p:column headerText="Fecha" filterBy="#{consulta.fechaFiltrable}" filterable="true" filterMatchMode="contains" >
