--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
@@ -36,6 +36,7 @@
                              paginator="true" rows="10" emptyMessage="No hay noticias que mostrar"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
+                             emptyMessage="No se encontraron datos"
                              reflow="true">
                         <p:column headerText="Usuario" filterBy="#{noti.ncPublica}" filterable="true" filterMatchMode="contains">
                             #{noti.ncPublica}
