--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
@@ -46,7 +46,7 @@
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta" var="clase" value="#{rptClasesController.listDatos}" 
-                             paginator="false" emptyMessage="No hay clases que mostrar"                                 
+                             paginator="false" emptyMessage="No se encontraron datos"
                              reflow="true">
 
                     <p:column headerText="Curso" >
