--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteCursos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteCursos/index.xhtml
@@ -30,6 +30,7 @@
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta"  var="car" value="#{rptCursosController.listDatos}" 
                              paginator="false"
+                             emptyMessage="No se encontraron datos"
                              reflow="true">
                     <p:column headerText="Curso" >
                         #{car.nombre}
