--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -50,6 +50,7 @@
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta" var="avance" value="#{rptEstadisticoAvanceController.listDatos}" 
                              paginator="false"
+                             emptyMessage="No se encontraron datos"
                              reflow="true">
                     <p:column headerText="Materia" >
                         #{avance.materia}
