--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
@@ -54,11 +54,8 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionArchivoMultimediaController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="mod_p1,focus" resetValues="true" oncomplete="configurarEnterTab()"/>
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionArchivoMultimediaController.setIndexMenu(0)}"/>
+                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionArchivoMultimediaController.cancelaModifica(gestionArchivoMultimediaController.archivoModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
