--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseVideoAlmacenada/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseVideoAlmacenada/editar.xhtml
@@ -47,12 +47,9 @@
                 
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar" action="#{gestionVideoClaseController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="mod_p1,focus" resetValues="true" />
-                    </p:commandButton>
+                    <p:commandButton value="Guardar" action="#{gestionVideoClaseController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />                    
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionVideoClaseController.setIndexMenu(0)}"/>
+                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionVideoClaseController.cancelaModifica(gestionVideoClaseController.claseModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
