--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/editar.xhtml
@@ -111,11 +111,8 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton value="Guardar" action="#{gestionarEvaluacionController.guardarModifica()}" update="p1" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" listener="#{gestionarEvaluacionController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{gestionarEvaluacionController.cancelaModifica(gestionarEvaluacionController.evaluacionModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
