--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/editar.xhtml
@@ -42,13 +42,18 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{catSeccionController.guardarModifica()}" update="p1,focus" oncomplete="configurarEnterTab()"/>
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1,focus" resetValues="true" listener="#{catSeccionController.resetNuevoForm()}" oncomplete="configurarEnterTab()" />
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" listener="#{catSeccionController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{catSeccionController.cancelaModifica(catSeccionController.modifica)}"/>
                     </p:commandButton>
-                    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Catálogo de grados" url="#{siteUrls.catGrado}" >    
+                        </p:menuitem>
+                        <p:menuitem value="Catálogo de materias" url="#{siteUrls.catMateria}">    
+                        </p:menuitem>
+                        <p:menuitem value="Catálogo Tipo de elementos de plantilla" url="#{siteUrls.catTipoElemPlantilla}">
+                        </p:menuitem>
+                    </p:tieredMenu>
                 </div>
             </h:form>
             <div class="EmptyBox5"></div>
