--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/ver.xhtml
@@ -43,13 +43,13 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Componentes interactivos" url="#{siteUrls.componenteInteractiva}" >    
+                        <p:menuitem value="Catálogo de grados" url="#{siteUrls.catGrado}" >    
                         </p:menuitem>
-                        <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">    
+                        <p:menuitem value="Catálogo de materias" url="#{siteUrls.catMateria}">
                         </p:menuitem>
-                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}">
+                        <p:menuitem value="Catálogo Tipo de elementos de plantilla" url="#{siteUrls.catTipoElemPlantilla}">
                         </p:menuitem>
-                    </p:tieredMenu>             
+                    </p:tieredMenu>            
                 </div>
             </h:form>
             <div class="EmptyBox5"></div>
