--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/editar.xhtml
@@ -51,11 +51,8 @@
                 <div class="EmptyBox20"></div> 
                 <div class="Container100">
                     <p:commandButton tabindex="12" value="Guardar" action="#{gestionarAnioEscolarController.guardarModifica()}" update="p1,focus" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1,focus" resetValues="true" />
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" listener="#{gestionarAnioEscolarController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{gestionarAnioEscolarController.cancelaModifica(gestionarAnioEscolarController.anioEscolarModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
