--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/crear.xhtml
@@ -66,7 +66,7 @@
                         </p:menuitem>
                         <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.basegestionEvaluacion}">    
+                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}">    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.gestionAlumnos}">    
                         </p:menuitem>
