--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
@@ -51,11 +51,8 @@
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton tabindex="6" value="Guardar" action="#{gestionNotaController.guardarModifica()}" update="mod_p1,focus" oncomplete="configurarEnterTab()" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="mod_p1,focus" resetValues="true" oncomplete="configurarEnterTab()" />
-                    </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionNotaController.setIndexMenu(0)}"/>
+                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionNotaController.cancelaModifica(gestionNotaController.notaModifica)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
