--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -8,7 +8,7 @@
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de sistema" url="#"/>
-            <p:menuitem value="Mantenimiento de Usuarios" url="#"/>
+            <p:menuitem value="Gestionar Usuarios" url="#"/>
             <p:menuitem value="Busqueda de Usuarios" url=""/>
             <p:separator />
         </p:breadCrumb>
