--- a/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/index.xhtml
@@ -8,7 +8,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de sistema" url="#"/>
-            <p:menuitem value="Mantenimiento de Usuarios" url="#"/>
+            <p:menuitem value="Gestionar Usuarios" url="#"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
