--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/crear.xhtml
@@ -52,45 +52,45 @@
                     <c:if test="#{gestionarEvaluacionController.evaluacionNuevo.evTipo=='Digital'}">
                         <p:panelGrid columns="4" class="Container100 Responsive">
                             <p:outputLabel  value="Título: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:inputText id="titulo" value="#{gestionarEvaluacionController.evaluacionNuevo.evNombre}" ></p:inputText>
+                            <p:inputText id="titulo" value="#{gestionarEvaluacionController.evaluacionNuevo.evNombre}" required="true" requiredMessage="Debe ingresar el nombre de la evaluacion"></p:inputText>
                             <p:outputLabel for="Curso" value="Curso: " class=" Responsive" ></p:outputLabel>
-                            <p:selectOneMenu id="Curso" filter="true" filterMatchMode="contains" value="#{gestionarEvaluacionController.idCurso}" >
+                            <p:selectOneMenu id="Curso" filter="true" filterMatchMode="contains" value="#{gestionarEvaluacionController.idCurso}" required="true" requiredMessage="Debe seleccionar un curso">
                                 <f:selectItems itemValue="#{curso.idCurso}" itemLabel="#{curso.crNombre}" value="#{gestionarEvaluacionController.cursoList}" var="curso"></f:selectItems>
                             </p:selectOneMenu>
                             <p:outputLabel  value="Ponderacion de la evaluación (%): " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:spinner id="ponderacion" min="0" max="100" value="#{gestionarEvaluacionController.evaluacionNuevo.evPonderacion}"></p:spinner>
+                            <p:spinner id="ponderacion" min="0" max="100" value="#{gestionarEvaluacionController.evaluacionNuevo.evPonderacion}" required="true" requiredMessage="Debe ingresar Ponderacion para la evaluacion"></p:spinner>
                             <p:outputLabel  value="Fecha de Inicio: " class="Contanier10 Responsive"></p:outputLabel>                        
                             <p:calendar  class="Container100" id="fechInicio" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaInicio}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                             <p:outputLabel  value="Fecha de Cierre: " class="Contanier10 Responsive"></p:outputLabel>
                             <p:calendar  class="Container100" id="fechaCierre" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaCierre}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de Cierre" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                             <p:outputLabel  value="Duración en minutos: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:spinner id="duracion" value="#{gestionarEvaluacionController.evaluacionNuevo.evDuracion}"></p:spinner>
+                            <p:spinner id="duracion" value="#{gestionarEvaluacionController.evaluacionNuevo.evDuracion}" required="true" requiredMessage="Debe ingresar la duracion de la evaluacion"></p:spinner>
                             <p:outputLabel  value="Intentos permitidos: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:spinner  id="intentos" value="#{gestionarEvaluacionController.evaluacionNuevo.evIntentos}"></p:spinner>
+                            <p:spinner  id="intentos" value="#{gestionarEvaluacionController.evaluacionNuevo.evIntentos}" required="true" requiredMessage="Debe ingresar el numeo de intentos permitidos"></p:spinner>
                             <p:outputLabel  value="Consultar Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:selectOneRadio  id="console" value="#{gestionarEvaluacionController.evaluacionNuevo.evNotaFin}">
+                            <p:selectOneRadio  id="console" value="#{gestionarEvaluacionController.evaluacionNuevo.evNotaFin}" required="true" requiredMessage="Selecione una opcion">
                                 <f:selectItem itemValue="Si" itemLabel="Si" />
                                 <f:selectItem itemValue="No" itemLabel="No" />
                             </p:selectOneRadio>
                             <p:outputLabel  value="Total de preguntas de la evaluación: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evTotalPreguntas}"></p:spinner>
+                            <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evTotalPreguntas}" required="true" requiredMessage="Debe ingresar el total de preguntas"></p:spinner>
                             <p:outputLabel  value="Preguntas aleatorias: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:selectOneRadio  id="pa" value="#{gestionarEvaluacionController.evaluacionNuevo.evPreguntasAleatorias}">
+                            <p:selectOneRadio  id="pa" value="#{gestionarEvaluacionController.evaluacionNuevo.evPreguntasAleatorias}" required="true" requiredMessage="Seleccione una opcion"> 
                                 <f:selectItem itemValue="Si" itemLabel="Si" />
                                 <f:selectItem itemValue="No" itemLabel="No" />
                             </p:selectOneRadio>                        
                             <p:outputLabel value="Respuestas aleatorias: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:selectOneRadio  id="ra" value="#{gestionarEvaluacionController.evaluacionNuevo.evRespuestasAleatorias}">
+                            <p:selectOneRadio  id="ra" value="#{gestionarEvaluacionController.evaluacionNuevo.evRespuestasAleatorias}" required="true" requiredMessage="Seleccione una opcion">
                                 <f:selectItem itemValue="Si" itemLabel="Si" />
                                 <f:selectItem itemValue="No" itemLabel="No" />
                             </p:selectOneRadio>
                             <p:outputLabel  value="Consultar respuestas al final: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:selectOneRadio  id="rf" value="#{gestionarEvaluacionController.evaluacionNuevo.evVerRespuesta}">
+                            <p:selectOneRadio  id="rf" value="#{gestionarEvaluacionController.evaluacionNuevo.evVerRespuesta}" required="true" requiredMessage="Seleccione una opcion">
                                 <f:selectItem itemValue="Si" itemLabel="Si" />
                                 <f:selectItem itemValue="No" itemLabel="No" />
                             </p:selectOneRadio>
                             <p:outputLabel  value="Preguntas por página: " class="Contanier10 Responsive"></p:outputLabel>
-                            <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evPreguntasPagina}"></p:spinner>
+                            <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evPreguntasPagina}" required="true" requiredMessage="Debe ingresar el numero de Preguntas/pagina"></p:spinner>
                         </p:panelGrid>
                     </c:if>
                     <div class="EmptyBox5"></div>
