--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/verEvaluacion.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/verEvaluacion.xhtml
@@ -66,7 +66,7 @@
                 </p:dialog>
                 <p:remoteCommand name="updateTablaConsulta" update="panelEV"></p:remoteCommand>
  
-  <h:panelGrid columns="1" style="background: #0288D1">  
+  <h:panelGrid columns="1" style="background: #0288D1" rendered="#{gestionarEvaluacionController.validaAlumno()}">  
       <h:outputText value="Tiempo Restante:" style="color: #ffffff"/>  
     
                 
