--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -50,7 +50,7 @@
                         #{car.estado}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <p:commandLink action="#{mntoUsuariosController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{mntoUsuariosController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Usuario" ></i></p:commandLink>
                         <p:commandLink action="#{mntoUsuariosController.modificar(car)}" >
                             <i class="icon-compose Fs25 Red MarRight10" title="Modificar Usuario" ></i>
                         </p:commandLink>
